# falcon_fhr

./: .gitignore  AGENTS.md  README.md  pyproject.toml
analysis/: hotel_deals_eda.ipynb  hotel_deals_eda_filtered.ipynb  hotel_deals_eda_v2.ipynb  latest_destination_counts.csv  mexico_pricing_analysis.ipynb
config/: README.md  birthdays.toml  caribbean-winter.toml  catalog-snapshot.toml  global-90d-sample.toml  global-rolling.toml  japan-range.toml  run_config.toml  thanksgiving-3n.toml  thanksgiving-4n.toml  us-caribbean-december.toml  us-texas-rolling.toml  weekend-global.toml
config/routines/apac/: japan-tomorrow.toml
config/routines/global/: next-14-days.toml  next-7-days.toml  through-oct-10.toml  today.toml
data/destinations/: catalog.json
docs/: CHANGELOG.md  webstorm-playwright-fingerprint.md
scripts/: analyze_value_windows.py  backfill_renovation_notice.py  bootstrap.py  capture_network.py  manage_destinations.py  replay_search.py  run_scraper.py
sql/analysis/: value_finder.sql
src/playwright/: __init__.py
src/secure_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/secure_scraper/analysis/: analyze_capture.py
src/secure_scraper/auth/: login_flow.py  two_step.py
src/secure_scraper/config/: run_config.py  settings.py
src/secure_scraper/core/: browser.py  fingerprint.py  logging.py  stealth.py
src/secure_scraper/destinations/: catalog.py
src/secure_scraper/hotels/: __init__.py  models.py  (+1 more)
tests/: test_fastmail.py  test_hotel_normalizer.py  test_otp.py  test_placeholder.py  test_sqlite_store.py  test_two_step.py
(+14 files in other folders)
